--- a/.env
+++ b/.env
@@ -9,4 +9,9 @@ KEY = "mrnow Mr. Next-gen online webwares"
 COMPANYNAME = "mrnow"
 
 
-SECRETTOKEN = "mrnow Mr. Next-gen online webwares"
+SECRETTOKEN = "mrnow Mr. Next-gen online webwares" 
+
+
+# Email Send key 
+PASSKEY=gihjccxlenpipctm
+EMAIL='abhisheksharma84457@gmail.com'
